fixed font sizes and spacings

--- a/c-sharks/style/card.css
+++ b/c-sharks/style/card.css
@@ -12,7 +12,7 @@
   align-items: center;
   width: 100%;
   max-width: 300px;
-  height: 350px;
+  height: 370px;
   border-radius: 20px;
   background: #f5f5f5;
   padding: 1.8rem;
