--- a/c-sharks/style/footer.css
+++ b/c-sharks/style/footer.css
@@ -30,9 +30,11 @@
 
 .footer-nav a {
   color: #EEEEEE;
+  line-height: 25px;
   text-decoration: none;
   font-size: var(--text-size-content-parag-var2);
   transition: color 0.3s;
+  letter-spacing: 0px;
 }
 
 .footer-nav a:hover {
@@ -48,6 +50,7 @@
   display: flex;
   gap: 35px;
   align-items: center;
+  width: 25%;
 }
 
 .footer-column2 {
@@ -56,7 +59,6 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-left: 75px;
   width: 30%;
   height: 30%;
 }
@@ -89,11 +91,13 @@
 }
 
 .footer-column3 h3 {
+  font-size: 20px;
   font-weight: 800;
 }
 
 .footer-column3 p {
+  font-size: 16px;
   margin-top: 10px;
   font-weight: 500;
-  line-height: 1.75;
+  line-height: 1.5;
 }
