--- a/c-sharks/style/header.css
+++ b/c-sharks/style/header.css
@@ -22,7 +22,7 @@
 }
 
 .navbar a {
-  font-size: var(--text-size-content-parag-var2);
+  font-size: var(--text-size-anchor);
   text-decoration: none;
   font-weight: 500;
   margin-left: 35px;
